# experiments-2025-ijcnn-benchmark-proximity-based-non-iid-FL

./: .gitignore  README.md  pyproject.toml
src/: main.py
