[tool.poetry]
name = "python-experiments-bootstrap"
version = "0.1.0"
description = ""
authors = ["Davide Domini <davide.domini@unibo.it>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
profed = "^0.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
